[gd_scene load_steps=8 format=3 uid="uid://dfhnk0yjllq07"]

[ext_resource type="Texture2D" uid="uid://d12wfe3j1m3ee" path="res://art/enemyFlyingAlt_1.png" id="1_2nlvs"]
[ext_resource type="Script" uid="uid://bee70b3knglw5" path="res://boss_1.gd" id="1_y66il"]
[ext_resource type="PackedScene" uid="uid://rpvfyvfaemfy" path="res://basic_laser_beam.tscn" id="2_p7pij"]
[ext_resource type="Texture2D" uid="uid://du3fbtda0uqom" path="res://art/enemyFlyingAlt_2.png" id="2_y66il"]

[sub_resource type="SpriteFrames" id="SpriteFrames_p7pij"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_2nlvs")
}, {
"duration": 1.0,
"texture": ExtResource("2_y66il")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mgxgb"]
radius = 145.0
height = 746.0

[sub_resource type="Curve2D" id="Curve2D_2nlvs"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -88, -368, 0, 0, 0, 0, -88, 368, 0, 0, 0, 0, -80, 368, 0, 0, 0, 0, -80, -368, 0, 0, 0, 0, -88, -368)
}
point_count = 5

[node name="Boss1" type="Area2D"]
collision_mask = 2
script = ExtResource("1_y66il")
laser = ExtResource("2_p7pij")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_p7pij")
autoplay = "default"
frame = 1
frame_progress = 0.502552
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_mgxgb")

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_2nlvs")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(-88, -368)
rotation = 1.5708

[node name="LaserBeamCD" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LaserBeamCD" to="." method="_on_laser_beam_cd_timeout"]
